Release 3.5.1
=============

Bugs fixed
----------

- Fix `__setitem__` on R list when the value is a simple Python object with
  a default low-level conversion (issue #864). 



Release 3.5.0
=============

New features
------------

- :obj:`rpy2.rinterface.NULL` can be refererenced in code before the embedded
  R is initialized.

- `LD_LIBRARY_PATH` is obtained from the executable `RScript` and set prior
  to initializing R at the :mod:`rpy2.rinterface` level (issue #833).

- The package is now fully typed with type hints.

- The :func:`rpy2.rinterface.evalr` accepts the named parameters `envir`
  and `enclos`, mirroring better the signature of the R function `eval`.

- New function :func:`rpy2.rinterface.evalr_expr` to evaluate R expressions.

- :mod:`rpy2.situation` is now using a module-level (called `logger`) to
  facilitate troubleshooting. When the module is run as an executable
  the flag `--verbose` can take the possible values DEBUG, INFO, WARNING, ERROR.

Changes
-------

- Better customizablity of conversion rules from R objects with `typeof`
  `INTSXP` (array of integers), `VECSEXP` (R list), and `LGLSXP` (array of
  booleans) :mod:`pandas`.

- The representation of R integer is no longer using a comma separator
  for thousands (issue #797).

- Requirement is now Python>=3.7. :mod:`rpy2` is no longer tested with Python 3.6.

- :mod:`rpy2.robject.lib.grid` was refactored to fix the conversion. This
  fixes issue #804. A classes now have a `classmethod` `r` for the R
  constructor (the `__init__` is the Python constructor).

- :obj:`rpy2.robjects.vectors.__all__` is removed.

- Cleaner class design by having :class:`rpy2.rinterface.NumpyArrayMixin`
  removed and replaced by
  :class:`rpy2.rinterface.SexpVectorWithNumpyInterface`.

- With Python < 3.8 the module :mod:`typing_extensions` is now a requirement.

- Initialization and update steps for
  :class:`rpy2.robjects.conversion.NameClassMap` were updated to ensure